kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: app1
  namespace: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: frontend
        image: dannyydocker/frontend:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80 #nginx is exposed on this port insider the container
