kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
 rules:
  - http:
      paths:
      - path: /docker
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
